--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
-image: gitlab/dind
-
-before_script:
-  - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD registry.hub.docker.io
-deploy:
+build:
+  image: docker:git
+  services:
+    - docker:dind
   script:
+    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD registry.hub.docker.io
     - docker build -t redkeet/$(echo $CI_PROJECT_NAME | sed -e 's/^docker-//g'):$(if [ '$CI_BUILD_REF_NAME' = 'master']; then echo 'latest'; else echo $CI_BUILD_REF_NAME; fi) .
