--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,5 +3,5 @@ build:
   services:
     - docker:dind
   script:
-    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD registry.hub.docker.io
+    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
     - docker build -t redkeet/$(echo $CI_PROJECT_NAME | sed -e 's/^docker-//g'):$(if [ '$CI_BUILD_REF_NAME' = 'master']; then echo 'latest'; else echo $CI_BUILD_REF_NAME; fi) .
