--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ services:
 
 build:
   script:
-    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
-    - docker build -t redkeet/$(echo $CI_PROJECT_NAME | sed -e 's/^docker-//g'):$(if [ $CI_BUILD_REF_NAME = 'master' ]; then echo 'latest'; else echo $CI_BUILD_REF_NAME; fi) .
-    - docker push redkeet/$(echo $CI_PROJECT_NAME | sed -e 's/^docker-//g'):$(if [ $CI_BUILD_REF_NAME = 'master' ]; then echo 'latest'; else echo $CI_BUILD_REF_NAME; fi)
+    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD project.elkya.com
+    - docker build -t elkya/docker-npm-bower-gulp-compass .
+    - docker push elkya/docker-npm-bower-gulp-compass
