--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,5 +6,5 @@ services:
 build:
   script:
     - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD project.elkya.com
-    - docker build -t elkya/docker-npm-bower-gulp-compass .
-    - docker push elkya/docker-npm-bower-gulp-compass
+    - docker build -t project.elkya.com/elkya/docker-npm-bower-gulp-compass .
+    - docker push project.elkya.com/elkya/docker-npm-bower-gulp-compass
