--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ services:
 
 build:
   script:
-    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD project.elkya.com
+    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD registry.elkya.com
     - docker build -t registry.elkya.com/elkya/docker-npm-bower-gulp-compass .
     - docker push registry.elkya.com/elkya/docker-npm-bower-gulp-compass
