--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ services:
 
 build:
   script:
-    - docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD registry.elkya.com
-    - docker build -t registry.elkya.com/elkya/docker-npm-bower-gulp-compass .
-    - docker push registry.elkya.com/elkya/docker-npm-bower-gulp-compass
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - docker build -t $CI_REGISTRY/elkya/docker-npm-bower-gulp-compass .
+    - docker push $CI_REGISTRY/elkya/docker-npm-bower-gulp-compass
