--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,5 +6,5 @@ services:
 build:
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/elkya/docker-npm-bower-gulp-compass .
-    - docker push $CI_REGISTRY/elkya/docker-npm-bower-gulp-compass
+    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH:$([[ $CI_BUILD_TAG == '' ]] && echo 'latest' && $CI_BUILD_TAG) .
+    - docker push $CI_REGISTRY/$CI_PROJECT_PATH:$([[ $CI_BUILD_TAG == '' ]] && echo 'latest' && $CI_BUILD_TAG)
